--- a/Projeto-P2/package.json
+++ b/Projeto-P2/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
@@ -19,15 +19,19 @@
     "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-hook-form": "^7.57.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mask-text": "^0.14.2",
+    "react-native-masked-text": "^1.12.5",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
     "yup": "^1.6.1"
   },
